# UserManagmentSystem

./: CMakeLists.txt  README.md
config/: config.ini
database/: users.db
include/: config.h  database.h  logger.h  menu.h  user_service.h
src/: config.cpp  database.cpp  logger.cpp  main.cpp  menu.cpp  user_service.cpp
utils/: hash.cpp  hash.h
